# Kreeda-mitra

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  angle_calculator.py  config.py  constants.py  movement_compare.py  pose_analyzer.py  session_manager.py  video_processor.py
tests/: __init__.py  test_angle_calculator.py  test_movement_compare.py  test_video_processor.py
